--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <div id="theme-toggle">
+            <label for="switch" class="switch">
+                <input type="checkbox" id="switch" onchange="toggleTheme()">
+                <span class="slider"></span>
+            </label>
+            <span id="theme-label">Light Mode</span>
+        </div>
     </header>
     
     <main>
