--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
             </ul>
         </nav>
         <div id="theme-toggle">
-            <label for="switch" class="switch">
-                <input type="checkbox" id="switch" onchange="toggleTheme()">
-                <span class="slider"></span>
-            </label>
-            <span id="theme-label">Light Mode</span>
+            <span id="theme-icon" onclick="toggleTheme()">🌙</span>
         </div>
     </header>
     
