--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
                 <p>Here, I talk about something fascinating that happened recently. It's an interesting read, so make sure you check it out.</p>
             </article>
         </section>
+
+        <!-- Post Form -->
+        <section id="post-form-container">
+            <form id="post-form" style="display: none;">
+                <h3>Create a New Blog Post</h3>
+                <div class="input-group">
+                    <label for="post-title">Title</label>
+                    <input type="text" id="post-title" name="post-title" required>
+                </div>
+                <div class="input-group">
+                    <label for="post-content">Content</label>
+                    <textarea id="post-content" name="post-content" required></textarea>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </main>
 
     <footer>
