--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <a href="https://haktanefe.com" id="logo-link">
+            <img src="logo.png" alt="My Blog Logo" id="logo">
+        </a>
         <h1>My Blog</h1>
         <span id="theme-icon" onclick="toggleTheme()">🌙</span>
     </header>
@@ -18,7 +21,7 @@
                 <h2>Exploring the Cosmos</h2>
                 <p class="date">Published on August 11, 2024</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Proin dolor. Maecenas est libero, tincidunt non ultrices ut, tincidunt ut velit. Fusce ut velit et nisl...</p>
-                <a href="blogs/example.html" class="read-more">Read More</a>
+                <a href="post.html" class="read-more">Read More</a>
             </article>
             <!-- Additional blog posts can be added similarly -->
         </section>
