--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="https://haktanefe.com" id="logo-link">
             <img src="logo.png" alt="My Blog Logo" id="logo">
         </a>
-        <h1>My Blog</h1>
+        <h1>Haqtan's Blog</h1>
         <span id="theme-icon" onclick="toggleTheme()">🌙</span>
     </header>
     <main>
