--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>Haqtan's Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <a href="https://haktanefe.com" id="logo-link">
             <img src="logo.png" alt="My Blog Logo" id="logo">
         </a>
-        <h1>My Blog</h1>
+        <h1>Haqtan's Blog</h1>
         <span id="theme-icon" onclick="toggleTheme()">🌙</span>
     </header>
     <main>
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 My Blog</p>
+        <p>&copy; 2024 haktanefe.com</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
