--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="logo.png" alt="My Blog Logo" id="logo">
         </a>
         <h1>Haqtan's Blog</h1>
-        <span id="theme-icon" onclick="toggleTheme()">🌙</span>
+        <span id="theme-icon">🌙</span>
     </header>
     <main>
         <section id="posts">
