--- a/blogs/post1.html
+++ b/blogs/post1.html
@@ -117,7 +117,7 @@
 <body>
     <header>
         <a href="https://haktanefe.com" id="logo-link">
-            <img src="logo.png" alt="My Blog Logo" id="logo">
+            <img src="../logo.png" alt="My Blog Logo" id="logo">
         </a>
         <h1>My Blog</h1>
         <span id="theme-icon">🌙</span>
