--- a/blogs/post1.html
+++ b/blogs/post1.html
@@ -84,7 +84,7 @@
 <body>
     <header>
         <a href="https://haktanefe.com" id="logo-link">
-            <img src="logo.png" alt="My Blog Logo" id="logo">
+            <img src="../logo.png" alt="My Blog Logo" id="logo">
         </a>
         <h1>My Blog</h1>
         <!-- No theme toggle icon, as dark mode is fixed -->
@@ -95,7 +95,7 @@
             <p class="date">Published on August 11, 2024</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Proin dolor. Maecenas est libero, tincidunt non ultrices ut, tincidunt ut velit. Fusce ut velit et nisl...</p>
             <!-- The content here is truncated; the full content should be provided -->
-            <a id="back-link" href="index.html">Back to Home</a>
+            <a id="back-link" href="../index.html">Back to Home</a>
         </section>
     </main>
 </body>
